first words of machine learning overview

--- a/lessons/05_ml_model_selection.ipynb
+++ b/lessons/05_ml_model_selection.ipynb
@@ -18,6 +18,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Regression"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Classification"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Cross-Validation"
    ]
   },
