ml overview finished

--- a/lessons/02_machine_learning_overview.ipynb
+++ b/lessons/02_machine_learning_overview.ipynb
@@ -20,6 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
@@ -40,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +182,7 @@
        "4      9.4        5  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,16 +195,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x7f35af496880>"
+       "<seaborn.axisgrid.FacetGrid at 0x7f162416bf10>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -254,9 +255,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Suppose that we observe a quantitative response $Y$ and $p$ different predictors, $ X_1, X_2, \\ldots, X_p$. We assume that there is some relationship between $Y$ and $X = (X_1, X_2,  \\ldots , X_p)$, which can be written in the very general form\n",
+    "Suppose that we observe a quantitative response $y$ and $p$ different predictors, $ X_1, X_2, \\ldots, X_p$. We assume that there is some relationship between $Y$ and $X = (X_1, X_2,  \\ldots , X_p)$, which can be written in the very general form\n",
     "$$\n",
-    "Y = f(X) + \\epsilon\n",
+    "y = f(X) + \\epsilon\n",
     "$$\n",
     "Here $f$ is some fixed but unknown function of $X$, and $\\epsilon$ is a random error term, which is independent of $X$ and has mean zero."
    ]
@@ -272,12 +273,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In many situations, a set of inputs $X$ are readily available, but the output $Y$ cannot be easily obtained. In this setting, since the error term averages to zero, we can predict $Y$ using\n",
+    "In many situations, a set of inputs $X$ are readily available, but the output $y$ cannot be easily obtained. In this setting, since the error term averages to zero, we can predict $Y$ using\n",
     "$$\n",
-    "\\hat{Y} = \\hat{f}(X),\n",
+    "\\hat{y} = \\hat{f}(X),\n",
     "$$\n",
-    "where $\\hat{f}$ represents our estimate for $f$, and $\\hat{Y}$ represents the resulting prediction for $Y$ . In this setting, $\\hat{f}$ is often treated as a __black-box__, in the sense\n",
-    "that one is not typically concerned with the exact form of $\\hat{f}$, provided that it yields accurate predictions for $Y$|."
+    "where $\\hat{f}$ represents our estimate for $f$, and $\\hat{y}$ represents the resulting prediction for $Y$ . In this setting, $\\hat{f}$ is often treated as a __black-box__, in the sense\n",
+    "that one is not typically concerned with the exact form of $\\hat{f}$, provided that it yields accurate predictions for $y$."
    ]
   },
   {
@@ -295,7 +296,7 @@
     "\n",
     "In this workshop we will study several techniques and algorithms, but generally speaking, the idea is to take the observed data for a _learning_ process. These observations are called __Training Data_, because we will use these training observations to train, or teach, our method how to estimate $f$. In other words, we are looking for\n",
     "$$\n",
-    "Y \\approx \\hat{f}(X)\n",
+    "y \\approx \\hat{f}(X)\n",
     "$$\n",
     "\n",
     "Broadly speaking, most statistical learning methods for this task can be characterized as either _parametric_ or _non-parametric_. Parametric models make assumptions about the functional form or shape of $f$ in order to reduce the searching space. A typicall example is Linear Regression, where we will need to estimate/fit/train only linear a few coefficients. On the other hand, non-parametric models do not make explicit assumptions about $f$, instead they seek an estimate of $f$ that gets as close to the\n",
@@ -329,14 +330,247 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Measuring the Quality of Fit"
+    "In order to evaluate the performance of a model on a given data set, we need some way to measure how well its predictions actually match the observed data. Let's define the concept of __*Metric*__, such functions can explain the performance of a model.\n",
+    "\n",
+    "The choice of metric completely depends on the type of model and the implementation plan of the model."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In order to evaluate the performance of a statistical learning method on a given data set, we need some way to measure how well its predictions actually match the observed data."
+    "### Regression Metrics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We know that target values of regression models are numeric (usually continuous) values. Then we can use metrics based on normed spaces or something similar."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### R² score, the coefficient of determination\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It is the proportion of the variation in the dependent variable that is predictable from the independent variables. It provides an indication of goodness of fit and therefore a measure of how well unseen samples are likely to be predicted by the model, through the proportion of explained variance.\n",
+    "\n",
+    "If $\\hat{y}_i = \\hat{f}(x_i)$ is the predicted value of the $i$-th sample and $y_i$ is the corresponding true value, then the coefficient of determination is defined as:\n",
+    "\n",
+    "$$\n",
+    "R^2(y, \\hat{y}) = 1 - \\frac{\\sum_{i=1}^n \\left( y_i - \\hat{y}_i\\right)^2}{\\sum_{i=1}^n \\left( y_i - \\bar{y}_i\\right)^2}\n",
+    "= 1 - \\frac{\\sum_{i=1}^n e_i^2}{\\sum_{i=1}^n \\left( y_i - \\bar{y}_i\\right)^2}\n",
+    "$$\n",
+    "\n",
+    "where $n$ is the total of samples, $y = \\tfrac{1}{n} \\sum_{i=1}^n y_i$ (the mean value).\n",
+    "\n",
+    "Since we can define the residuals as $e_i = y_i - \\hat{y}_i$ is isual to read in the literature the analogous definition\n",
+    "\n",
+    "$$\n",
+    "R^2(y, \\hat{y})  = 1 - \\frac{SS_{\\text{res}}}{SS_{\\text{tot}}}\n",
+    "$$\n",
+    "\n",
+    "where $SS_{\\text{res}} = \\sum_{i=1}^n \\left( y_i - \\hat{y}_i\\right)^2 = \\sum_{i=1}^n e_i^2$ is called the _residual sum of squares_ and $SS_{\\text{tot}} = \\sum_{i=1}^n \\left( y_i - \\bar{y}_i\\right)^2$ is the _total sum of squares_.\n",
+    "\n",
+    "\n",
+    "Note that the best possible score is 1.0 and it can be negative (because the model can be arbitrarily worse). A constant model that always predicts the expected (average) value of $y$, disregarding the input features, would get an  score of 0.0."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Mean squared error"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The mean square error corresponds to the expected value of the squared (quadratic) error or $\\ell_2$ - norm loss. It is defined as \n",
+    "\n",
+    "$$\n",
+    "MSE(y, \\hat{y}) = \\frac{1}{n} \\sum_{i=1}^n \\left( y_i - \\hat{y}_i \\right)^2\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Mean absolute error"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The mean absolute error corresponds to the expected value of the absolute error or $\\ell_1$-norm loss. It is defined as\n",
+    "\n",
+    "$$\n",
+    "MAE(y, \\hat{y}) = \\frac{1}{n} \\sum_{i=1}^n \\left\\lvert y_i - \\hat{y}_i \\right\\rvert\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Classification Metrics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In order to measure a classification model we need different types of metrics, since we are working with categories. Before defining metrics, we will introduce a very useful tool for classification tasks."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Confusion Matrix"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A confusion matrix, also known as an error matrix is a specific table layout that allows visualization of the performance of an algorithm. Each row of the matrix represents the instances in an actual class while each column represents the instances in a predicted class, or vice versa – both variants are found in the literature. The name stems from the fact that it makes it easy to see whether the system is confusing two classes (i.e. commonly mislabeling one as another). [- Source -](https://en.wikipedia.org/wiki/Confusion_matrix)\n",
+    "\n",
+    "For a binary classification problem a confusion matrix looks like this:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![confusion_matrix](../images/confusion_matrix.png)\n",
+    "\n",
+    "A really useful example:\n",
+    "\n",
+    "![meme_cm](../images/confusion_matrix_pregnancy.jpg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Initially, the aim is to maximize the sum of the well-classified elements, however, this depends on the problem to be solved."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Accuracy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\\textrm{accuracy}= \\frac{TP+TN}{TP+TN+FP+FN}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Recall"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\\textrm{recall} = \\frac{TP}{TP+FN}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Precision"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\\textrm{precision} = \\frac{TP}{TP+FP} $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### F-Score"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\\text{F-score} = 2\\times \\frac{  \\textrm{precision} \\times \\textrm{recall} }{  \\textrm{precision} + \\textrm{recall} } $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's take for example a really bad model for the wine dataset. Consider a random predictor between the minimum and the maximum wine quaility."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def random_model(X, target):\n",
+    "    values = X[target]\n",
+    "    min_target = values.min()\n",
+    "    max_target = values.max()\n",
+    "    return np.random.uniform(low=min_target, high=max_target, size=X.shape[0])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can compute any metric with a few lines of code."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.8084752016040055"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import mean_squared_error\n",
+    "y_true = data[\"quality\"]\n",
+    "y_pred = random_model(data, \"quality\")\n",
+    "mean_squared_error(y_true, y_pred)"
    ]
   }
  ],
