--- a/lessons/03_ml_regresssion.ipynb
+++ b/lessons/03_ml_regresssion.ipynb
@@ -617,7 +617,7 @@
     "\n",
     "The goal is to solve the following optimization problem\n",
     "\n",
-    "$$\\min_{\\beta} J(\\beta)$$"
+    "$$\\min_{\\beta} J(\\beta) = \\frac{1}{2} \\left\\lVert y - X \\beta \\right\\rVert^2$$"
    ]
   },
   {
@@ -742,6 +742,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Lasso"
    ]
@@ -749,8 +754,30 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### ElasticNet "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Random Forest"
    ]
   },
   {
