selection models in progress

--- a/lessons/02_machine_learning_overview.ipynb
+++ b/lessons/02_machine_learning_overview.ipynb
@@ -572,6 +572,17 @@
     "y_pred = random_model(data, \"quality\")\n",
     "mean_squared_error(y_true, y_pred)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Is this a good model? \n",
+    "\n",
+    "Answer:\n",
+    "\n",
+    "![cox](../images/box.jpg)"
+   ]
   }
  ],
  "metadata": {
