--- a/lessons/03_ml_regresssion.ipynb
+++ b/lessons/03_ml_regresssion.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
        "4 -0.002592 -0.031988 -0.046641   135.0  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +392,7 @@
        "target  211.500000  346.000000  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +423,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -434,16 +434,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x7fa4fe47c1c0>"
+       "<seaborn.axisgrid.PairGrid at 0x7f0db9b17190>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -604,7 +604,7 @@
     }
    },
    "source": [
-    "## Gradient Descend\n"
+    "## Gradient Descent"
    ]
   },
   {
@@ -613,11 +613,11 @@
    "source": [
     "Let's define our cost function\n",
     "\n",
-    "$$J(\\beta) = \\frac{1}{2} \\left\\lVert y - X \\beta \\right\\rVert^2 =  \\frac{1}{2} \\sum_{i=1}^{n} \\left( y^{(i)} - f_\\beta(x^{(i)})\\right)^2$$\n",
+    "$$J(\\beta) = \\frac{1}{2} \\left\\lVert y - X \\beta \\right\\rVert^2_2 =  \\frac{1}{2} \\sum_{i=1}^{n} \\left( y^{(i)} - f_\\beta(x^{(i)})\\right)^2$$\n",
     "\n",
     "The goal is to solve the following optimization problem\n",
     "\n",
-    "$$\\min_{\\beta} J(\\beta) = \\frac{1}{2} \\left\\lVert y - X \\beta \\right\\rVert^2$$"
+    "$$\\min_{\\beta} J(\\beta) = \\min_{\\beta} \\frac{1}{2}  \\left\\lVert y - X \\beta \\right\\rVert^2_2$$"
    ]
   },
   {
@@ -666,15 +666,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ -10.0098663  -239.81564367  519.84592005  324.3846455  -792.17563855\n",
-      "  476.73902101  101.04326794  177.06323767  751.27369956   67.62669218]\n"
+      "Coefficients:\n",
+      " [ -10.0098663  -239.81564367  519.84592005  324.3846455  -792.17563855\n",
+      "  476.73902101  101.04326794  177.06323767  751.27369956   67.62669218]\n",
+      "\n",
+      "Score: 0.5177484222203499\n"
      ]
     }
    ],
@@ -683,46 +686,26 @@
     "\n",
     "model = LinearRegression()\n",
     "model.fit(diabetes_X, diabetes_y)\n",
-    "beta_est = model.coef_.T\n",
-    "print(beta_est)"
+    "print(f\"Coefficients:\\n {model.coef_.T}\\n\")\n",
+    "print(f\"Score: {model.score(diabetes_X, diabetes_y)}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "944 µs ± 54.5 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
+      "993 µs ± 171 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
      ]
     }
    ],
    "source": [
     "%%timeit\n",
     "LinearRegression().fit(diabetes_X, diabetes_y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.5177484222203499"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model.score(diabetes_X, diabetes_y)"
    ]
   },
   {
@@ -742,7 +725,39 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Ridge regression shrinks the regression coefficients by imposing a penalty on their size. The ridge coefficients minimize a penalized residual sum of squares,\n",
+    "$$\n",
+    "\\min_\\beta J(\\beta) = \\min_{\\beta} \\frac{1}{2}  \\left\\lVert y - X \\beta \\right\\rVert^2_2 + \\frac{\\alpha}{2} \\left\\lVert \\beta \\right\\rVert_2^2\n",
+    "$$\n",
+    "where $\\alpha > 0$ is a complexity parameter that controls the amount of shrinkage. This penalization helps to deal with colinearity."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Coefficients:\n",
+      " [  20.13800709 -131.24149467  383.48370376  244.83506964  -15.18674139\n",
+      "  -58.34413649 -174.84237091  121.9849503   328.4987567   110.8864333 ]\n",
+      "\n",
+      "Score: 0.4875007515715647\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import Ridge\n",
+    "\n",
+    "ridge_model = Ridge(alpha=0.5)\n",
+    "ridge_model.fit(diabetes_X, diabetes_y)\n",
+    "print(f\"Coefficients:\\n {ridge_model.coef_.T}\\n\")\n",
+    "print(f\"Score: {ridge_model.score(diabetes_X, diabetes_y)}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -754,36 +769,167 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Lasso regression is also a regularization technique, but instead of penalizing using a $\\ell_2$-norm it considers a $\\ell_1$-penalization. It is useful in some contexts due to its tendency to prefer solutions with fewer non-zero coefficients and even it could be utilized as a way to select features in a model.\n",
+    "\n",
+    "$$\n",
+    "\\min_\\beta J(\\beta) = \\min_{\\beta} \\frac{1}{2n}  \\left\\lVert y - X \\beta \\right\\rVert^2_2 + \\alpha \\left\\lVert \\beta \\right\\rVert_1^2\n",
+    "$$\n",
+    "\n",
+    "where $\\left\\lVert \\beta \\right\\rVert_1 = \\sum_{i=0}^p \\left\\lvert \\beta_i \\right\\rvert$."
+   ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Coefficients:\n",
+      " [  0.          -0.         471.04187427 136.50408382  -0.\n",
+      "  -0.         -58.31901693   0.         408.0226847    0.        ]\n",
+      "\n",
+      "Score: 0.45524097290369625\n"
+     ]
+    }
+   ],
    "source": [
-    "### ElasticNet "
+    "from sklearn.linear_model import Lasso\n",
+    "\n",
+    "lasso_model = Lasso(alpha=0.5)\n",
+    "lasso_model.fit(diabetes_X, diabetes_y)\n",
+    "print(f\"Coefficients:\\n {lasso_model.coef_.T}\\n\")\n",
+    "print(f\"Score: {lasso_model.score(diabetes_X, diabetes_y)}\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "## Random Forest"
+    "### Elastic-Net "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Elastic-Net is a compromise between Ridge and Lasso regression, considering both $\\ell_1$ and $\\ell_2$-norm regularizaion. Let's considering a ratio $\\rho \\in (0,1)$, then\n",
+    "\n",
+    "$$\n",
+    "\\min_\\beta J(\\beta) = \\min_{\\beta} \\frac{1}{2n}  \\left\\lVert y - X \\beta \\right\\rVert^2_2 + \\alpha \\rho \\left\\lVert \\beta \\right\\rVert_1^2 + \\frac{\\alpha (1 - \\rho)}{2} \\left\\lVert \\beta \\right\\rVert_2^2\n",
+    "$$\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Coefficients:\n",
+      " [ 1.55873597  0.          6.36640961  4.61688157  1.82562593  1.36291798\n",
+      " -4.0457662   4.44665465  6.10117638  3.8868802 ]\n",
+      "\n",
+      "Score: 0.018495661086463056\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import ElasticNet\n",
+    "\n",
+    "elasticnet_model = ElasticNet(alpha=0.5, l1_ratio=0.4)\n",
+    "elasticnet_model.fit(diabetes_X, diabetes_y)\n",
+    "print(f\"Coefficients:\\n {elasticnet_model.coef_.T}\\n\")\n",
+    "print(f\"Score: {elasticnet_model.score(diabetes_X, diabetes_y)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Decision Tree"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Tree-based methods are non-parametric models that involve stratifying or segmenting the predictor space into a number of simple regions. They are conceptually simple yet powerful. Its name come from the fact that the set of splitting rules used to segment the predictor space can be summarized in a tree.\n",
+    "\n",
+    "Roughly speaking, there are two steps in these models.\n",
+    "\n",
+    "1. We divide the predictor space ($X$) into $J$ distinct and non-overlapping regions, $R_1, R_2, \\ldots , R_J$.\n",
+    "2. For every observation that falls into the region $R_j$, we make the same prediction, which is simply the mean of the response values."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Score: 0.7617420924706106\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "\n",
+    "decision_tree_model = DecisionTreeRegressor(\n",
+    "    min_samples_leaf=0.01,\n",
+    "    random_state=42\n",
+    ")\n",
+    "decision_tree_model.fit(diabetes_X, diabetes_y)\n",
+    "# print(f\"Coefficients:\\n {decision_tree_model.coef_.T}\\n\")\n",
+    "print(f\"Score: {decision_tree_model.score(diabetes_X, diabetes_y)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Random Forest"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It is an ensemble method, approach that combines many simple _blocks_ models in order to obtain a single and potentially very powerful model. Blocks are decision trees on where each tree just use a random sample of predictors."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Score: 0.9195910933940452\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "\n",
+    "random_forest_model =  RandomForestRegressor(\n",
+    "    n_estimators=100,\n",
+    "    random_state=42\n",
+    ")\n",
+    "random_forest_model.fit(diabetes_X, diabetes_y)\n",
+    "print(f\"Score: {random_forest_model.score(diabetes_X, diabetes_y)}\")"
+   ]
   }
  ],
  "metadata": {
