--- a/lessons/06_neural_networks.ipynb
+++ b/lessons/06_neural_networks.ipynb
@@ -755,6 +755,16 @@
     "    test(test_dataloader, model, loss_fn)\n",
     "print(\"Done!\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sources:\n",
+    "\n",
+    "- [Deep Learning: An Introduction for Applied Mathematicians](https://epubs.siam.org/doi/10.1137/18M1165748)\n",
+    "- [PyTorch Tutorial](https://pytorch.org/tutorials/beginner/basics/intro.html)"
+   ]
   }
  ],
  "metadata": {
