--- a/lessons/dinn.ipynb
+++ b/lessons/dinn.ipynb
@@ -309,7 +309,7 @@
     "    variable = dde.callbacks.VariableValue(\n",
     "        variable_list,\n",
     "        period=5000,\n",
-    "        filename=\"variables_sird.dat\"\n",
+    "        # filename=\"variables_sird.dat\"\n",
     "    )\n",
     "    losshistory, train_state = model.train(\n",
     "        iterations=iterations,\n",
