--- a/lessons/pinn_inverse.ipynb
+++ b/lessons/pinn_inverse.ipynb
@@ -11,7 +11,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Example: Heat Equation"
+    "PINNs are also an alternative for data-driven discovery of partial differential equations. Considering the same setup, we are looking for estimating the pyshics-related parameter(s) $\\lambda$ from\n",
+    "\n",
+    "$$\n",
+    "\\begin{align*}\n",
+    "\\mathcal{F}(u(z); \\lambda) &= f(z) \\quad z \\text{ in } \\Omega \\\\\n",
+    "\\mathcal{B}(u(z)) &= g(z) \\quad z \\text{ in } \\partial \\Omega\n",
+    "\\end{align*}\n",
+    "$$ "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Example: Diffusion Equation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\frac{\\partial y}{\\partial t} = C\\frac{\\partial^2y}{\\partial x^2} - e^{-t}(\\sin(\\pi x) - \\pi^2\\sin(\\pi x)),   \\qquad x \\in [-1, 1], \\quad t \\in [0, 1]\n",
+    "$$\n"
    ]
   },
   {
