fix data filepaths

--- a/lessons/machine_learning_overview.ipynb
+++ b/lessons/machine_learning_overview.ipynb
@@ -188,7 +188,8 @@
     }
    ],
    "source": [
-    "data_filepath = Path().resolve().parent / \"data\" / \"winequality-red.csv\"\n",
+    "data_filepath = \"https://raw.githubusercontent.com/aoguedao/neural_computing_workshop/main/data/winequality-red.csv\"\n",
+    "# data_filepath = Path().resolve().parent / \"data\" / \"winequality-red.csv\"  # If you are running locally\n",
     "data = pd.read_csv(data_filepath, sep=\";\")\n",
     "data.head()"
    ]
