--- a/lessons/ml_classification.ipynb
+++ b/lessons/ml_classification.ipynb
@@ -51,7 +51,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filepath = Path().resolve().parent / \"data\" / \"challenger.txt\"\n",
+    "# filepath = Path().resolve().parent / \"data\" / \"challenger.txt\"  # If you are running locally\n",
+    "filepath = \"https://raw.githubusercontent.com/aoguedao/neural_computing_workshop/main/data/Challenger.txt\"\n",
     "challenger = pd.DataFrame(\n",
     "    np.loadtxt(filepath, skiprows=1).astype(int),\n",
     "    columns=[\"temp_f\", \"nm_bad_rings\"]\n",
