--- a/lessons/machine_learning_overview.ipynb
+++ b/lessons/machine_learning_overview.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's consider the famous wine dataset by [P. Cortez, A. Cerdeira, F. Almeida, T. Matos and J. Reis, 2009](http://dx.doi.org/10.1016/j.dss.2009.05.016). It consists of two datasets related to red and white variants of the __*Portuguese*__ _\"Vinho Verde\"_ wine, each one with 11 attributes and the target is the quality of the wine based on sensory data and it is a score between 0 and 10.   "
+    "Let's consider the famous wine dataset by [P. Cortez, A. Cerdeira, F. Almeida, T. Matos and J. Reis, 2009](http://dx.doi.org/10.1016/j.dss.2009.05.016). It consists of two datasets related to red and white variants of the __*Portuguese*__ _\"Vinho Verde\"_ wine, each one with 11 attributes. tThe target is the quality of the wine based on sensory data and it is a score between 0 and 10.   "
    ]
   },
   {
@@ -202,7 +202,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x7f162416bf10>"
+       "<seaborn.axisgrid.FacetGrid at 0x7fbc1d3a3640>"
       ]
      },
      "execution_count": 3,
@@ -240,9 +240,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A usual problem could be to predict the quality of a new wine, either its score or a classification as good/bad wine.\n",
+    "A typical problem would be to predict the quality of a new wine, either through its score or a classification as good/bad wine. \n",
     "\n",
-    "__*Can we came out with a mathematical model for predicting/classifing wine without specific rules?*__"
+    "__*Can we come out with a mathematical model for predicting/classifing wine without specific rules?*__"
    ]
   },
   {
@@ -293,15 +293,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now the natural question is, _How do we estimate $f$?_\n",
+    "Now the natural question is: _How do we estimate $f$?_\n",
     "\n",
     "In this workshop we will study several techniques and algorithms, but generally speaking, the idea is to take the observed data for a _learning_ process. These observations are called __Training Data_, because we will use these training observations to train, or teach, our method how to estimate $f$. In other words, we are looking for\n",
     "$$\n",
     "y \\approx \\hat{f}(X)\n",
     "$$\n",
     "\n",
-    "Broadly speaking, most statistical learning methods for this task can be characterized as either _parametric_ or _non-parametric_. Parametric models make assumptions about the functional form or shape of $f$ in order to reduce the searching space. A typicall example is Linear Regression, where we will need to estimate/fit/train only linear a few coefficients. On the other hand, non-parametric models do not make explicit assumptions about $f$, instead they seek an estimate of $f$ that gets as close to the\n",
-    "data points as possible. As you can imagine, the parametric models can be very interpetrable and non-parametric models can be more accurated. It is important to select an adequate model depending of the trade-off between prediction and interpretability we need."
+    "Broadly speaking, most statistical learning methods for this task can be characterized as either _parametric_ or _non-parametric_. Parametric models make assumptions about the functional form or shape of $f$ in order to reduce the searching space. A typical example is Linear Regression, where we will need to estimate/fit/train only a few coefficients. On the other hand, non-parametric models do not make explicit assumptions about f, instead they seek an estimate of f that gets as close to the data points as possible. As you can imagine, the parametric models can be very interpretable and non-parametric models can be more accurate. It is important to select an adequate model depending on the trade-off between prediction and interpretability we need."
    ]
   },
   {
@@ -317,7 +316,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Most classical machine learning problems fall into one of two categories: _supervised_ or _unsupervised_. The example with the wine dataset is supervised, since we have labels for each sample. If these labels are numeric (score wine quality) we are in a __Regression__ model, however, if labels are categories (good/bad quality), it is called a __Classification__ model. By contrast, unsupervised learning describes a more challenging situation where observations do not have any label. The situation is referred to as unsupervised because we lack a response variable that can supervise our analysis. A classical example is a __Clustering__ model, when the goal is to find relationships between samples and create groups."
+    "Most classical machine learning problems fall into one of two categories: _supervised_ or _unsupervised_. The example with the wine dataset is supervised, since we have labels for each sample. If these labels are numeric (score of wine quality) we are in a __Regression__ model; however, if labels are categories (good/bad quality), it is called a __Classification__ model.\n",
+    "\n",
+    "By contrast, unsupervised learning describes a more challenging situation where observations do not have any label. The situation is referred to as unsupervised because we lack a response variable that can supervise our analysis. A classical example is a __Clustering__ model, when the goal is to find relationships between samples and create groups."
    ]
   },
   {
@@ -331,7 +332,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In order to evaluate the performance of a model on a given data set, we need some way to measure how well its predictions actually match the observed data. Let's define the concept of __*Metric*__, such functions can explain the performance of a model.\n",
+    "In order to evaluate the performance of a model on a given data set, we need some way to measure how well its predictions actually match the observed data.\n",
+    "\n",
+    "Let's define the concept of __*Metric*__, as such functions can explain the performance of a model.\n",
     "\n",
     "The choice of metric completely depends on the type of model and the implementation plan of the model."
    ]
@@ -361,7 +364,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It is the proportion of the variation in the dependent variable that is predictable from the independent variables. It provides an indication of goodness of fit and therefore a measure of how well unseen samples are likely to be predicted by the model, through the proportion of explained variance.\n",
+    "It is the proportion of the variation in the dependent variable that is predictable from the independent variables. It provides an indication of goodness of fit, and therefore a measure of how well unseen samples are likely to be predicted by the model through the proportion of explained variance.\n",
     "\n",
     "If $\\hat{y}_i = \\hat{f}(x_i)$ is the predicted value of the $i$-th sample and $y_i$ is the corresponding true value, then the coefficient of determination is defined as:\n",
     "\n",
@@ -372,7 +375,7 @@
     "\n",
     "where $n$ is the total of samples, $y = \\tfrac{1}{n} \\sum_{i=1}^n y_i$ (the mean value).\n",
     "\n",
-    "Since we can define the residuals as $e_i = y_i - \\hat{y}_i$ is isual to read in the literature the analogous definition\n",
+    "Since we can define the residuals as $e_i = y_i - \\hat{y}_i$ is isual to read in literature the analogous definition\n",
     "\n",
     "$$\n",
     "R^2(y, \\hat{y})  = 1 - \\frac{SS_{\\text{res}}}{SS_{\\text{tot}}}\n",
@@ -445,7 +448,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A confusion matrix, also known as an error matrix is a specific table layout that allows visualization of the performance of an algorithm. Each row of the matrix represents the instances in an actual class while each column represents the instances in a predicted class, or vice versa – both variants are found in the literature. The name stems from the fact that it makes it easy to see whether the system is confusing two classes (i.e. commonly mislabeling one as another). [- Source -](https://en.wikipedia.org/wiki/Confusion_matrix)\n",
+    "A confusion matrix, also known as an error matrix, is a specific table layout that allows visualization of the performance of an algorithm. Each row of the matrix represents the instances in an actual class, while each column represents the instances in a predicted class, or vice versa – both variants are found in literature. The name stems from the fact that it makes it easy to see whether the system is confusing two classes (i.e. commonly mislabeling one as another). [- Source -](https://en.wikipedia.org/wiki/Confusion_matrix)\n",
     "\n",
     "For a binary classification problem a confusion matrix looks like this:"
    ]
@@ -533,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -553,22 +556,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2.8084752016040055"
+       "2.574856594207295"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from sklearn.metrics import mean_squared_error\n",
+    "\n",
     "y_true = data[\"quality\"]\n",
     "y_pred = random_model(data, \"quality\")\n",
     "mean_squared_error(y_true, y_pred)"
