--- a/lessons/ml_regresssion.ipynb
+++ b/lessons/ml_regresssion.ipynb
@@ -520,12 +520,13 @@
     "Let's define the matrix of inputs $X \\in \\mathbb{R}^{n \\times (p + 1)} $, also know as design matrix, model matrix or regressor matrix, and the output vector $y \\in \\mathbb{R}^n$ such that \n",
     "\n",
     "$$\n",
+    "\\begin{align*}\n",
     "X = \n",
     "\\begin{bmatrix} \n",
-    " (x^{(1)})^\\top  \\\\ \n",
-    " (x^{(2)})^\\top  \\\\\n",
+    "(x^{(1)})^\\top  \\\\ \n",
+    "(x^{(2)})^\\top  \\\\\n",
     "\\vdots \\\\\n",
-    " (x^{(n)})^\\top  \\\\\n",
+    "(x^{(n)})^\\top  \\\\\n",
     "\\end{bmatrix}\n",
     "=\n",
     "\\begin{bmatrix} \n",
@@ -534,12 +535,11 @@
     "\\vdots & \\vdots & & \\vdots \\\\\n",
     "1 & x^{(n)}_1 & \\dots & x^{(n)}_p \\\\\n",
     "\\end{bmatrix} \n",
-    "\n",
     "\\qquad\n",
     "\\text{and}\n",
     "\\qquad\n",
-    "\n",
     "y = \\begin{bmatrix}y^{(1)} \\\\ y^{(2)} \\\\ \\vdots \\\\ y^{(n)}\\end{bmatrix}\n",
+    "\\end{align*}\n",
     "$$\n",
     "\n",
     "\n"
